--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 TIMEOUT=5000
 URL_SERVICE_MEDIA=http://localhost:8080
+URL_SERVICE_USER=http://localhost:5000
+
+JWT_SECRET="randomstringgg"
+JWT_SECRET_REFRESH_TOKEN="randomstringgg"
+JWT_ACCESS_TOKEN_EXPIRED=5m
+JWT_REFRESH_TOKEN_EXPIRED=1d
